# mucheenflow

./: .gitignore  Dockerfile  LICENSE  build.sh  pyproject.toml  requirements.txt  run.sh
data_pipelines/: phase_0.py
eda/: docker-compose.yml
eda/notebooks/: explore_superconductor.ipynb
eda/notebooks/.ipynb_checkpoints/: explore_superconductor-checkpoint.ipynb
feature_engineering/: first_order_interactions.py  pca.py
feature_selection/: lasso.py
modeling/: linear_regression.py  random_forest_regression.py  split.py
muhsheen/data_pipelines/: phase_0.py
muhsheen/eda/: Makefile
muhsheen/feature_engineering/: first_order_interactions.py  pca.py
muhsheen/feature_selection/: lasso.py
muhsheen/modeling/: linear_regression.py  random_forest_regression.py  split.py
muhsheen/serve/: serve_lr.py  serve_rf.py
muhsheen/workflow/: flow.yml  run.py
serve/: serve_lr.py  serve_rf.py
workflow/: flow.yml  run.py
